name:                HasCacBDD
version:             0.1.0.0
synopsis:            Haskell bindings for CacBDD
homepage:            https://github.com/m4lvin/HasCacBDD
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.de
category:            Data
build-type:          Simple
cabal-version:       >=1.10

description: Haskell bindings for CacBDD, a BDD Package with Dynamic Cache Management.
             This package provides access to a C-wrapper which in turn calls the original C++ code.
             More information about CacBDD is available at <http://kailesu.net/CacBDD>.

source-repository head
  type:     git
  location: git://github.com/m4lvin/HasCacBDD.git

library
  exposed-modules:     Data.HasCacBDD,
                       Data.HasCacBDD.Visuals
  build-depends:       base >= 4.6 && < 5,
                       process >= 1.1,
                       QuickCheck
  default-language:    Haskell2010
  hs-source-dirs:      hs
  include-dirs:        c cpp
  extra-libraries:     m, stdc++
  cc-options:          -g -O3 -Wno-deprecated
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness
  c-sources:           c/BDDNodeC.cpp
                       cpp/Base.cpp
                       cpp/BDDNode.cpp
                       cpp/BDDNode.h
                       cpp/CTable.cpp
                       cpp/CTable.h
                       cpp/DdNode.cpp
                       cpp/DdNode.h
                       cpp/Manager.cpp
                       cpp/Manager.h
                       cpp/Timer.cpp
                       cpp/UTable.cpp
                       cpp/UTable.h
                       cpp/XBits.cpp
                       cpp/XFunction.cpp
                       cpp/XInts.cpp
                       cpp/XVector.cpp


executable hascacbdd-example
  default-language:    Haskell2010
  main-is:             example.hs
  build-depends:       base >=4.6,
                       HasCacBDD
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness

test-suite basics
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Basics.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.6,
                       HasCacBDD
  ghc-options:         -Wall

test-suite tautologies
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Tautologies.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.6,
                       HasCacBDD,
                       QuickCheck > 2.4
  ghc-options:         -Wall -fhpc -fforce-recomp
