name:                HasCacBDD
version:             0.1.0.0
synopsis:            Haskell bindings for CacBDD
homepage:            https://github.com/m4lvin/HasCacBDD
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.de
category:            Data
build-type:          Custom
cabal-version:       >=1.10

description: Haskell bindings for CacBDD, a BDD Package with Dynamic Cache Management.
             Original C++ code from <http://kailesu.net/CacBDD> and a C wrapper are included.

extra-source-files:
  c/*.cpp
  c/*.h
  c/Makefile
  cpp/*.cpp
  cpp/*.h
  cpp/Makefile
  cpp/README

source-repository head
  type:     git
  location: git://github.com/m4lvin/HasCacBDD.git

library
  exposed-modules:     Data.HasCacBDD,
                       Data.HasCacBDD.Visuals
  build-depends:       base >=4.6 && < 5,
                       process >= 1.1,
                       QuickCheck
  default-language:    Haskell2010
  hs-source-dirs:      hs
  extra-libraries:     stdc++, CacBDD
  cc-options:          -fPIC -shared
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness

executable hascacbdd-example
  default-language:    Haskell2010
  main-is:             example.hs
  build-depends:       base >=4.6,
                       HasCacBDD
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness

test-suite basics
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Basics.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.6,
                       HasCacBDD
  ghc-options:         -Wall

test-suite tautologies
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Tautologies.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.6,
                       HasCacBDD,
                       QuickCheck > 2.4
  ghc-options:         -Wall -fhpc -fforce-recomp
