name:                HasCacBDD
version:             0.1.0.0
synopsis:            Haskell bindings for CacBDD
homepage:            https://github.com/m4lvin/HasCacBDD
license:             GPL-2
license-file:        LICENSE
author:              Malvin Gattinger
maintainer:          malvin@w4eg.de
category:            Data
build-type:          Simple
cabal-version:       >=1.23

description: Haskell bindings for CacBDD, a Binary Decision Diagram (BDD) package with dynamic cache management.
             Original C++ code from <http://kailesu.net/CacBDD> and a C wrapper are included.

extra-source-files:
  README.md
  stack.yaml
  c/BDDNodeC.cpp
  c/BDDNodeC.h
  c/Makefile
  cpp/*.cpp
  cpp/*.h
  cpp/Makefile
  cpp/OriginalMakefile
  cpp/README

source-repository head
  type:     git
  location: git://github.com/m4lvin/HasCacBDD.git

library
  exposed-modules:     Data.HasCacBDD,
                       Data.HasCacBDD.Visuals
  build-depends:       base >=4.8 && < 5,
                       process >= 1.1,
                       QuickCheck
  default-language:    Haskell2010
  hs-source-dirs:      hs
  include-dirs:        c cpp
  extra-libraries:     m, stdc++
  cc-options:          -g -O3 -Wall -shared -fPIC
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness
  c-sources:           c/BDDNodeC.cpp
                       cpp/Base.cpp
                       cpp/BDDNode.cpp
                       cpp/BDDNode.h
                       cpp/CTable.cpp
                       cpp/CTable.h
                       cpp/DdNode.cpp
                       cpp/DdNode.h
                       cpp/Manager.cpp
                       cpp/Manager.h
                       cpp/Timer.cpp
                       cpp/UTable.cpp
                       cpp/UTable.h
                       cpp/XBits.cpp
                       cpp/XFunction.cpp
                       cpp/XInts.cpp
                       cpp/XVector.cpp


test-suite example
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Example.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.8,
                       HasCacBDD
  ghc-options:         -pgml g++ -Wall -fPIC -fno-full-laziness

test-suite basics
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Basics.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.8,
                       HasCacBDD
  ghc-options:         -Wall

test-suite tautologies
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Tautologies.hs
  hs-source-dirs:      tests
  build-depends:       base >=4.8,
                       HasCacBDD,
                       QuickCheck > 2.4
  ghc-options:         -Wall -fhpc -fforce-recomp
